Feladatok File_Char

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 /out/production/Prog_II/gimesi_second/Second_zh/file_char/F10_File.class
 /out/production/Prog_II/gimesi_second/Second_zh/file_binary/File_Random_3.class
 /out/production/Prog_II/gimesi_second/Second_zh/file_binary/KORB.class
+/Adatok.bin
+/out/production/Prog_II/gimesi_second/Second_zh/Dolgozat/Hegedüs_János_First_Zh.class
+/out/production/Prog_II/gimesi_second/Second_zh/Dolgozat/Nyilvantartas.class
+/out/production/Prog_II/gimesi_second/Second_zh/file_binary/Ob.class
