--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,30 @@
 /out/production/Prog_II/gimesi_second/Second_zh/Dolgozat/Hegedüs_János_First_Zh.class
 /out/production/Prog_II/gimesi_second/Second_zh/Dolgozat/Nyilvantartas.class
 /out/production/Prog_II/gimesi_second/Second_zh/file_binary/Ob.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Ablak.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Beolvas.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Button_1.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Button_2.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Button_3.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Button_4.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Gomb.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Graphics_1.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Image_2.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Jframe_1.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Jframe_2.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Jframe_3.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Jframe_4.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Keret.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Keret.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Keret0.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Kiír.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Kiír0.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Kép.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Kép_be.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Label_1.class
+/out/production/Prog_II/gimesi_second/Second_zh/Frame/Label_2.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Rajz.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Teszt.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Uj_jatek$1.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Uj_jatek.class
+/out/production/Prog_II/gimesi_second/Second_zh/Components/Valto.class
