--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,3 @@
 /nbproject/private/
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F1_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/Dolgozat/F1_Dolgozat.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F1_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F2_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F2_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F3_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F3_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F4_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F4_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F5_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F5_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F6_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F6_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F6_Misi.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F7_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F7_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F7_Misi.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F8_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F8_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F9_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F9_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/F10_BinFile.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_char/F10_File.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/File_Random_3.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/KORB.class
+/out/
 /Adatok.bin
-/out/production/Prog_II/gimesi_second/Second_zh/Dolgozat/Hegedüs_János_First_Zh.class
-/out/production/Prog_II/gimesi_second/Second_zh/Dolgozat/Nyilvantartas.class
-/out/production/Prog_II/gimesi_second/Second_zh/file_binary/Ob.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Ablak.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Beolvas.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Button_1.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Button_2.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Button_3.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Button_4.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Gomb.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Graphics_1.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Image_2.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Jframe_1.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Jframe_2.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Jframe_3.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Jframe_4.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Keret.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Keret.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Keret0.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Kiír.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Kiír0.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Kép.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Kép_be.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Label_1.class
-/out/production/Prog_II/gimesi_second/Second_zh/Frame/Label_2.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Rajz.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Teszt.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Uj_jatek$1.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Uj_jatek.class
-/out/production/Prog_II/gimesi_second/Second_zh/Components/Valto.class
